Proper EAS config for Capacitor

--- a/eas.json
+++ b/eas.json
@@ -1,40 +1,17 @@
 {
   "cli": {
-    "version": ">= 5.9.1"
+    "version": ">= 5.9.1",
+    "appVersionSource": "remote"
   },
   "build": {
-    "base": {
-      "node": "18.18.0",
-      "npm": {
-        "install": {
-          "args": ["--legacy-peer-deps"]
-        }
-      }
-    },
-    "development": {
-      "extends": "base",
-      "developmentClient": true,
-      "distribution": "internal"
-    },
-    "preview": {
-      "extends": "base",
-      "distribution": "internal",
-      "android": {
-        "buildType": "apk"
-      }
-    },
     "production": {
-      "extends": "base",
       "android": {
-        "buildType": "app-bundle"
+        "buildType": "app-bundle",
+        "withoutCredentials": false
       },
       "ios": {
         "buildConfiguration": "Release"
       }
     }
-  },
-  "submit": {
-    "production": {}
   }
 }
-
