--- a/eas.json
+++ b/eas.json
@@ -7,12 +7,12 @@
     "production": {
       "android": {
         "buildType": "app-bundle",
-        "gradleCommand": ":app:bundleRelease"
+        "gradleCommand": ":app:bundleRelease",
+        "prebuildCommand": "npm run build && npx cap sync android"
       },
       "ios": {
         "buildConfiguration": "Release"
       },
-      "prebuildCommand": "npm run build && npx cap copy && npx cap update",
       "env": {
         "NODE_ENV": "production"
       }
