Add iOS scheme to app.json

--- a/app.json
+++ b/app.json
@@ -13,7 +13,9 @@
       "package": "com.evoworks.app"
     },
     "ios": {
-      "bundleIdentifier": "com.evoworks.app"
+      "bundleIdentifier": "com.evoworks.app",
+      "buildNumber": "1.0.0",
+      "scheme": "App"
     }
   }
 }
