--- a/eas.json
+++ b/eas.json
@@ -11,7 +11,8 @@
         "prebuildCommand": "npm run build && npx cap sync android"
       },
       "ios": {
-        "buildConfiguration": "Release"
+        "buildConfiguration": "Release",
+        "prebuildCommand": "npm run build && npx cap sync ios"
       },
       "env": {
         "NODE_ENV": "production"
