🚀 Add x402 protocol integration for Jarvis + autonomous AI payments
- Install @coinbase/coinbase-sdk and viem for x402
- Create lib/billing/x402.ts with payment service
- Add Jarvis API endpoints: /api/jarvis/hire, /verify-payment, /balance
- Implement jarvisHireAgent() for one-call agent discovery + hiring
- Add on-chain payment verification on Base
- Create comprehensive Jarvis integration documentation
- Enable autonomous AI-to-AI payments via USDC
- Support HTTP 402 Payment Required standard

This enables Jarvis to hire agents autonomously with instant USDC payments!

--- a/package.json
+++ b/package.json
@@ -55,6 +55,8 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "stripe": "^14.10.0",
+    "@coinbase/coinbase-sdk": "^0.0.16",
+    "viem": "^2.21.0",
     "tailwind-merge": "^2.1.0",
     "tailwindcss-animate": "^1.0.7",
     "three": "^0.160.0",
