--- a/package.json
+++ b/package.json
@@ -56,6 +56,9 @@
     "react-dom": "^18.3.1",
     "stripe": "^14.10.0",
     "@coinbase/coinbase-sdk": "^0.0.16",
+    "@rainbow-me/rainbowkit": "^2.1.0",
+    "wagmi": "^2.12.0",
+    "@tanstack/react-query": "^5.56.0",
     "viem": "^2.21.0",
     "tailwind-merge": "^2.1.0",
     "tailwindcss-animate": "^1.0.7",
