--- a/package.json
+++ b/package.json
@@ -56,7 +56,7 @@
     "framer-motion": "^10.16.16",
     "jose": "^5.2.0",
     "lucide-react": "^0.294.0",
-    "next": "14.2.5",
+    "next": "^16.0.10",
     "next-auth": "^5.0.0-beta.30",
     "openai": "^4.20.1",
     "react": "^18.3.1",
