--- a/eas.json
+++ b/eas.json
@@ -12,6 +12,7 @@
       },
       "ios": {
         "buildConfiguration": "Release",
+        "scheme": "App",
         "prebuildCommand": "npm run build && npx cap sync ios"
       },
       "env": {
