--- a/eas.json
+++ b/eas.json
@@ -12,9 +12,7 @@
       },
       "ios": {
         "buildConfiguration": "Release",
-        "scheme": "App",
-        "workspace": "ios/App/App.xcworkspace",
-        "prebuildCommand": "npm run build && npx cap sync ios"
+        "prebuildCommand": "npm run build && npx cap sync ios && cd ios/App && xcodebuild -list"
       },
       "env": {
         "NODE_ENV": "production"
