--- a/eas.json
+++ b/eas.json
@@ -7,16 +7,12 @@
     "production": {
       "android": {
         "buildType": "app-bundle",
-        "gradleCommand": ":app:bundleRelease",
-        "prebuildCommand": "npm run build && npx cap sync android"
+        "gradleCommand": ":app:bundleRelease"
       },
       "ios": {
         "image": "macos-ventura-13.6-xcode-15.2",
         "buildConfiguration": "Release",
-        "prebuildCommand": "npm run build && npx cap sync ios"
-      },
-      "env": {
-        "NODE_ENV": "production"
+        "scheme": "App"
       }
     }
   }
